@@ -10,6 +10,7 @@
     - Logic to determine the members to be kicked
     - Check instance Logic
     - Bypass the channel permission failure
+    - Use message instead of context to avoid context token expire
 - Use paginator to overcome the page limit
 - Check whether the member has the ignored roles in the setup command
 - Improved show kick command
